<resources>
    <string name="app_name">Goal Counter</string>
    <string name="action_settings">Settings</string>
    <string name="yellow_card">Yellow:</string>
    <string name="red_card">Red:</string>
    <string name="foul">Foul:</string>
    <string name="Initial_value">0</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="goal_button">+1 Goal</string>
    <string name="foul_button">+1 Foul</string>
    <string name="redCard_button">Red Card</string>
    <string name="yellowCard_button">Yellow Card</string>
    <string name="reset_button">Reset</string>
</resources>
